[package]
name = "mungeon-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastrand = "1.5.0"
uuid = { version = "0.8.2", features = ["v4"] }
rocket = "0.4.10"
image = "0.23.14"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
